--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -12,7 +12,7 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 == Project Team
 
 === Shannon Lee
-image::Shannon.jpg[width="150", align="left"]
+image::Shannon.png[width="150", align="left"]
 {empty}[https://github.com/shannonlee98[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer
@@ -20,7 +20,7 @@ Role: Developer
 '''
 
 === Lindon Ng
-image::Lindon.jpg[width="150", align="left"]
+image::Lindon.png[width="150", align="left"]
 {empty}[http://github.com/Greatnest[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer
@@ -28,7 +28,7 @@ Role: Developer
 '''
 
 === Joshua Tam
-image::Joshua.JPG[width="150", align="left"]
+image::Joshua.png[width="150", align="left"]
 {empty}[http://github.com/JOSHTAM[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer
@@ -36,7 +36,7 @@ Role: Developer
 '''
 
 === Tay Jin Wen
-image::JinWen.jpg[width="150", align="left"]
+image::JinWen.png[width="150", align="left"]
 {empty}[http://github.com/jinwentay[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer
@@ -44,7 +44,7 @@ Role: Developer
 '''
 
 === Tan Guan Yew
-image::GuanYew.jpg[width="150", align="left"]
+image::GuanYew.png[width="150", align="left"]
 {empty}[http://github.com/guanyewtan[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer
